--- a/.github/workflows/send_email.yml
+++ b/.github/workflows/send_email.yml
@@ -1,3 +1,4 @@
+ - name: Send mail
  with:
     # Specify connection via URL (replaces server_address, server_port, secure,
     # username and password)
