--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: 'GitHub Actions Weather Bot'
 on:
   push:
   schedule:
-    - cron: '01 13 * * *'
+    - cron: '01 15 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -16,8 +16,8 @@ jobs:
       - name: 'Send mail'
         uses: dawidd6/action-send-mail@master
         with:
-          serveraddress: smtp.163.com
-          serverport: 465
+          server_address: smtp.163.com
+          port: 465
           username: ${{ secrets.MAIL_USERNAME }}
           password: ${{ secrets.MAIL_PASSWORD }}
           subject: Shanghai Weather Report
