got repo and commit

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,12 @@ bin-release/
 
 # Executables
 *.swf
+*.swp
 *.air
 *.ipa
 *.apk
+*.txt
+*/log
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
