--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Build and Release Folders
-bin-debug/
-bin-release/
-[Oo]bj/
-[Bb]in/
-
-# Other files and folders
-.settings/
-
-# Executables
+.DS_Store
 *.swf
 *.swp
-*.air
-*.ipa
-*.apk
-*.txt
-*/log
-*.html
+data/
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
