--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,23 +4,24 @@ on:
   schedule:
     - cron: '41 12 * * *'
 jobs:
-  build:
+  get report:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
 
-      - name: 'Get weather report'
-        run: bash ./weather.sh
+      - name: Get morning report
+      	if: github.event.schedule != '30 5 * * 1,3'
+        run: bash ./reporter.sh morning
         
-      - name: 'Send mail'
+      - name: Send email
         uses: dawidd6/action-send-mail@master
         with:
           server_address: smtp.163.com
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: Workflow finished
+          subject: 
           body: file://result.html
-          to: 792112796@qq.com
-          from: Me
+          to: acker_autor@163.com
+          from: Autor
