--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,14 @@ on:
   schedule:
     - cron: '41 12 * * *'
 jobs:
-  get report:
+  get_report:
     runs-on: ubuntu-latest
     steps:
       - name: 'Checkout codes'
         uses: actions/checkout@v1
 
       - name: Get morning report
-      	if: github.event.schedule != '30 5 * * 1,3'
+        if: github.event.schedule != '30 5 * * 1,3'
         run: bash ./reporter.sh morning
         
       - name: Send email
@@ -21,7 +21,7 @@ jobs:
           server_port: 465
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
-          subject: 
+          subject: Autor
           body: file://result.html
           to: acker_autor@163.com
           from: Autor
