--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
         
       - name: Set morning
         run: |
-          time=morning    
+          echo "{time}={morning}" >> $GITHUB_ENV
         
       - name: Get report
         if: github.event.schedule != '30 5 * * 1,3'
