--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         
       - name: Get report
         if: github.event.schedule != '30 5 * * 1,3'
-        run: bash ./reporter.sh $time
+        run: bash ./reporter.sh ${{ env.time }}
         
       - name: Send email
         uses: dawidd6/action-send-mail@master
