--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,9 @@ jobs:
       - name: get report
         if: github.event.schedule != '30 5 * * 1,3'
         run: bash ./reporter.sh $time
-        
+        env:
+          ENV: "asd"
+          
       - name: send email
         uses: dawidd6/action-send-mail@master
         with:
