--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
           username: ${{secrets.MAIL_USERNAME}}
           password: ${{secrets.MAIL_PASSWORD}}
           subject: Autor
-          html_body: file://data/rst.html
+          html_body: file://rst.html
           to: acker_autor@163.com
           from: Autor
