--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,8 +1,7 @@
 name: ssh
 on:
-  push:
-    branches:
-      - master
+  schedule: 
+    - cron: '36 4 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
