--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,7 +1,8 @@
 name: ssh
 on:
-  schedule: 
-    - cron: '38 4 * * *'
+  push:
+    branches:
+      - main 
 jobs:
   build:
     runs-on: ubuntu-latest
