--- a/.github/workflows/ssh.yml
+++ b/.github/workflows/ssh.yml
@@ -1,8 +1,9 @@
 name: ssh
 on:
+  schedule:
+    - cron: '43 4 * * *'
   push:
-    branches:
-      - main 
+  
 jobs:
   build:
     runs-on: ubuntu-latest
