--- a/.github/workflows/dispatch.yml
+++ b/.github/workflows/dispatch.yml
@@ -19,7 +19,7 @@ jobs:
         run: bash ./reporter.sh ${{ inputs.time }}
         env:
           LOCATION: ${{ secrets.LOCATION }}
-          GITHUB_USERNAME: ${{ secrets.GITHUB_USERNAME }}
+          GITHUB_USERNAME: ${{ secrets.GITHAB_USERNAME }}
           SIGN: ${{ secrets.SIGN }}
           POCKET_CONSUMER_KEY: ${{ secrets.POCKET_CONSUMER_KEY }}
           POCKET_ACCESS_TOKEN: ${{ secrets.POCKET_ACCESS_TOKEN }}
